--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Calculator</title>
 <script defer src="bundle.js"></script></head>
 <body>
-<button id="themeToggle">Theme</button>
+<button id="themeToggle">Change the theme</button>
 <div class="calc">
     <div class="calc-screen">
         <p>0</p>
